mudando diretorio de build da imagem no docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
 
   ejs:
     restart: unless-stopped
-    build: .
+    build: /src/app/
     image: ejs-challenge:latest
     ports:
       - 9090:3000
