--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -24,6 +24,7 @@ env:
   DEPLOYMENT_NAME: ejs-challenge # TODO: update to deployment name
   IMAGE: ejs-challenge
   NAMESPACE: default
+  DB_HOST: mongo-mongodb
 
 jobs:
   setup-build-publish-deploy:
@@ -79,6 +80,7 @@ jobs:
     # Deploy the Docker image to the GKE cluster
     - name: Deploy
       run: |-
-        ./linux-amd64/helm -n $NAMESPACE upgrade --install $DEPLOYMENT_NAME ./helm/$DEPLOYMENT_NAME --set image.repository=gcr.io/$PROJECT_ID/$IMAGE --set image.tag=$GITHUB_SHA
+        ./linux-amd64/helm -n $NAMESPACE upgrade --install $DEPLOYMENT_NAME ./helm/$DEPLOYMENT_NAME \ 
+        --set image.repository=gcr.io/$PROJECT_ID/$IMAGE --set image.tag=$GITHUB_SHA --set envMap.DB_HOST=$DB_HOST
         kubectl rollout status deployment/$DEPLOYMENT_NAME
         kubectl get services -o wide
