--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -97,7 +97,7 @@ jobs:
 
     - uses: act10ns/slack@v1
       with:
-        status: ${{ job.status }}
+        status: ${{ job.status }} sed -n 5p funny_quotes.txt
         steps: ${{ toJson(steps) }}
         channel: '#devops'
       if: always()
