--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -32,7 +32,7 @@ env:
 jobs:
   setup-build-publish-deploy:
     name: Setup, Build, Publish, and Deploy
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     environment: production
 
     steps:
@@ -81,26 +81,41 @@ jobs:
       run: |-
         docker push "gcr.io/$PROJECT_ID/$IMAGE:$GITHUB_SHA"
 
-    # Set up helm
-    - name: Set up Helm
-      run: |-
-        curl -LO https://get.helm.sh/helm-v3.5.2-linux-amd64.tar.gz
-        tar -xvzf helm-v3.5.2-linux-amd64.tar.gz
-        chmod ug+x linux-amd64/helm 
+    # # Set up helm
+    # - name: Set up Helm
+    #   run: |-
+    #     curl -LO https://get.helm.sh/helm-v3.5.2-linux-amd64.tar.gz
+    #     tar -xvzf helm-v3.5.2-linux-amd64.tar.gz
+    #     chmod ug+x linux-amd64/helm 
     
     # && mv linux-amd64/helm /bin/helm
 
     # Deploy the Docker image to the GKE cluster
     - name: Deploy
       run: |-
-        ./linux-amd64/helm -n $NAMESPACE upgrade --install $DEPLOYMENT_NAME ./helm/$DEPLOYMENT_NAME --set image.repository=gcr.io/$PROJECT_ID/$IMAGE --set image.tag=$GITHUB_SHA --set envMap.DB_HOST=$DB_HOST
+        helm -n $NAMESPACE upgrade --install $DEPLOYMENT_NAME ./helm/$DEPLOYMENT_NAME --set image.repository=gcr.io/$PROJECT_ID/$IMAGE --set image.tag=$GITHUB_SHA --set envMap.DB_HOST=$DB_HOST
         kubectl rollout status deployment/$DEPLOYMENT_NAME
         kubectl get services -o wide
 
-
     - uses: act10ns/slack@v1
       with:
-        status: ${{ job.status }} ${{ env.SUCCESS }}
+        status: ${{ job.status }} 
         steps: ${{ toJson(steps) }}
         channel: '#devops'
       if: always()
+      run: |-
+        export RANDOM_SENTENCE=$(shuf -i 1-24 -n 1)
+        export SUCCESS=$(sed -n $RANDOM_SENTECEp .github/workflows/funny_quotes.txt)
+        curl -X POST -H 'Content-type: application/json' --data '{"FunnyQuote":$SUCCESS }' $SLACK_WEBHOOK_URL
+    
+
+    # - uses: act10ns/slack@v1
+    #   with:
+    #     status: ${{ job.status }} 
+    #     steps: ${{ toJson(steps) }}
+    #     channel: '#devops'
+    #   if: success()
+    #   run: |-
+    #     export RANDOM_SENTENCE=$(shuf -i 1-24 -n 1)
+    #     export SUCCESS=$(sed -n $RANDOM_SENTECEp funny_quotes.txt)
+    #     curl -X POST -H 'Content-type: application/json' --data '{"FunnyQuote":$SUCCESS }' $SLACK_WEBHOOK_URL
