--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -33,7 +33,7 @@ jobs:
   setup-build-publish-deploy:
     name: Setup, Build, Publish, and Deploy
     runs-on: ubuntu-20.04
-    environment: production
+    environment: development
 
     steps:
     - name: Slack Notification
@@ -44,13 +44,12 @@ jobs:
       if: always()
 
     - name: Checkout
+      id: git-checkout
       uses: actions/checkout@v2
 
-    - run: |-
-        export SUCCESS=$(sed -n 5p funny_quotes.txt)
-        echo $SUCCESS
     # Setup gcloud CLI
     - uses: google-github-actions/setup-gcloud@v0.2.0
+      id: setup-cloud
       with:
         service_account_key: ${{ secrets.GKE_SA_KEY }}
         project_id: ${{ secrets.GKE_PROJECT }}
@@ -59,9 +58,11 @@ jobs:
     # helper for authentication
     - run: |-
         gcloud --quiet auth configure-docker
+      id: configure-docker  
 
     # Get the GKE credentials so we can deploy to the cluster
     - uses: google-github-actions/get-gke-credentials@v0.2.1
+      id: get-cluster-credentials
       with:
         cluster_name: ${{ env.GKE_CLUSTER }}
         location: ${{ env.GKE_ZONE }}
@@ -69,6 +70,7 @@ jobs:
 
     # Build the Docker image
     - name: Build
+      id: docker-build
       run: |-
         docker build \
           --tag "gcr.io/$PROJECT_ID/$IMAGE:$GITHUB_SHA" \
@@ -78,6 +80,7 @@ jobs:
 
     # Push the Docker image to Google Container Registry
     - name: Publish
+      id: docker-push
       run: |-
         docker push "gcr.io/$PROJECT_ID/$IMAGE:$GITHUB_SHA"
 
@@ -92,6 +95,7 @@ jobs:
 
     # Deploy the Docker image to the GKE cluster
     - name: Deploy
+      id: deploy
       run: |-
         helm -n $NAMESPACE upgrade --install $DEPLOYMENT_NAME ./helm/$DEPLOYMENT_NAME --set image.repository=gcr.io/$PROJECT_ID/$IMAGE --set image.tag=$GITHUB_SHA --set envMap.DB_HOST=$DB_HOST
         kubectl rollout status deployment/$DEPLOYMENT_NAME
@@ -103,7 +107,8 @@ jobs:
         steps: ${{ toJson(steps) }}
         channel: '#devops'
       if: always()
-      run: |-
+      
+    - run: |-
         export RANDOM_SENTENCE=$(shuf -i 1-24 -n 1)
         export SUCCESS=$(sed -n $RANDOM_SENTECEp .github/workflows/funny_quotes.txt)
         curl -X POST -H 'Content-type: application/json' --data '{"FunnyQuote":$SUCCESS }' $SLACK_WEBHOOK_URL
