--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -25,8 +25,6 @@ env:
   IMAGE: ejs-challenge
   NAMESPACE: default
   DB_HOST: mongo-mongodb
-  REPOSITORY_URL: docker.pkg.github.com
-  IMAGE_NAME: ${{ github.repository }}/alerta-cli
   SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
 
 jobs:
@@ -97,7 +95,7 @@ jobs:
     - name: Deploy
       id: deploy
       run: |-
-        helm -n $NAMESPACE upgrade --install $DEPLOYMENT_NAME ./helm/$DEPLOYMENT_NAME --set image.repository=gcr.io/$PROJECT_ID/$IMAGE --set image.tag=$GITHUB_SHA --set envMap.DB_HOST=$DB_HOST
+        hel -n $NAMESPACE upgrade --install $DEPLOYMENT_NAME ./helm/$DEPLOYMENT_NAME --set image.repository=gcr.io/$PROJECT_ID/$IMAGE --set image.tag=$GITHUB_SHA --set envMap.DB_HOST=$DB_HOST
         kubectl rollout status deployment/$DEPLOYMENT_NAME
         kubectl get services -o wide
 
