--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -1,15 +1,3 @@
-# This workflow will build a docker container, publish it to Google Container Registry, and deploy it to GKE when a release is created
-#
-# To configure this workflow:
-#
-# 1. Ensure that your repository contains the necessary configuration for your Google Kubernetes Engine cluster, including deployment.yml, kustomization.yml, service.yml, etc.
-#
-# 2. Set up secrets in your workspace: GKE_PROJECT with the name of the project and GKE_SA_KEY with the Base64 encoded JSON service account key (https://github.com/GoogleCloudPlatform/github-actions/tree/docs/service-account-key/setup-gcloud#inputs).
-#
-# 3. Change the values for the GKE_ZONE, GKE_CLUSTER, IMAGE, and DEPLOYMENT_NAME environment variables (below).
-#
-# For more support on how to run the workflow, please visit https://github.com/google-github-actions/setup-gcloud/tree/master/example-workflows/gke
-
 name: Build and Deploy to GKE
 
 on:
@@ -82,15 +70,6 @@ jobs:
       run: |-
         docker push "gcr.io/$PROJECT_ID/$IMAGE:$GITHUB_SHA"
 
-    # # Set up helm
-    # - name: Set up Helm
-    #   run: |-
-    #     curl -LO https://get.helm.sh/helm-v3.5.2-linux-amd64.tar.gz
-    #     tar -xvzf helm-v3.5.2-linux-amd64.tar.gz
-    #     chmod ug+x linux-amd64/helm 
-    
-    # && mv linux-amd64/helm /bin/helm
-
     # Deploy the Docker image to the GKE cluster
     - name: Deploy
       id: deploy
@@ -110,15 +89,4 @@ jobs:
         export RANDOM_SENTENCE=$(shuf -i 1-24 -n 1)p
         export SUCCESS=$(sed -n $RANDOM_SENTENCE .github/workflows/funny_quotes.txt)
         curl -X POST -H 'Content-type: application/json' --data '{"text":"'"$SUCCESS"'"}' $SLACK_WEBHOOK_URL
-    
-
-    # - uses: act10ns/slack@v1
-    #   with:
-    #     status: ${{ job.status }} 
-    #     steps: ${{ toJson(steps) }}
-    #     channel: '#devops'
-    #   if: success()
-    #   run: |-
-    #     export RANDOM_SENTENCE=$(shuf -i 1-24 -n 1)
-    #     export SUCCESS=$(sed -n $RANDOM_SENTECEp funny_quotes.txt)
-    #     curl -X POST -H 'Content-type: application/json' --data '{"FunnyQuote":$SUCCESS }' $SLACK_WEBHOOK_URL
+      name: FunnyQuote
