--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -1,9 +1,10 @@
 name: Build and Deploy to GKE
 
 on:
-  push:
-    branches:
-      - master
+  workflow_dispatch:
+  # push:
+  #   branches:
+  #     - master
 
 env:
   PROJECT_ID: ${{ secrets.GKE_PROJECT }}
