--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -1,10 +1,9 @@
 name: Build and Deploy to GKE
 
 on:
-  workflow_dispatch:
-  # push:
-  #   branches:
-  #     - master
+  push:
+    branches:
+      - master
 
 env:
   PROJECT_ID: ${{ secrets.GKE_PROJECT }}
