--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -86,12 +86,10 @@ jobs:
         yq w helm/ejs-challenge/values.yaml "image.tag" "$GITHUB_SHA"
         ls -lha
 
-    - name: Commit changes
-      id: commit-changes
-      uses: EndBug/add-and-commit@v7
+    - uses: stefanzweifel/git-auto-commit-action@v4
       with:
-        author_name: github_actions
-        add: './helm/ejs-challenge/values.yaml'
+        commit_message: Update Helm Image Tag
+        repository: './helm/ejs-challenge/values.yaml'
 
     # Push the Docker image to Google Container Registry
     # - name: Publish
