--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,13 +24,22 @@ env:
   GKE_ZONE: us-central1-c   # TODO: update to cluster zone
   DEPLOYMENT_NAME: ejs-challenge # TODO: update to deployment name
   IMAGE: ejs-challenge
+  SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
 
 jobs:
   setup-build-publish-deploy:
     name: Setup, Build, Publish, and Deploy
     runs-on: ubuntu-latest
     
+
     steps:
+    - name: Slack Notification
+      uses: act10ns/slack@v1
+      with:
+        status: starting
+        channel: '#devops'
+      if: always()
+
     - name: Checkout
       uses: actions/checkout@v2
 
@@ -73,3 +82,10 @@ jobs:
         helm upgrade --install $DEPLOYMENT_NAME ./helm/$DEPLOYMENT_NAME --set image.repository=gcr.io/$PROJECT_ID/$IMAGE --set image.tag=$GITHUB_SHA 
         kubectl rollout status deployment/$DEPLOYMENT_NAME
         kubectl get services -o wide
+    
+    - uses: act10ns/slack@v1
+      with:
+        status: ${{ job.status }} 
+        steps: ${{ toJson(steps) }}
+        channel: '#devops'
+      if: always()
