--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,25 +42,27 @@ jobs:
 
     - name: Checkout
       uses: actions/checkout@v2
+      id: checkout
 
     # Setup gcloud CLI
     - uses: google-github-actions/setup-gcloud@v0.2.0
       with:
         service_account_key: ${{ secrets.GKE_SA_KEY }}
         project_id: ${{ secrets.GKE_PROJECT }}
+      id: cli-gcloud
 
     # Configure Docker to use the gcloud command-line tool as a credential
     # helper for authentication
     - run: |-
         gcloud --quiet auth configure-docker
-
+      id: docker-quiet
     # Get the GKE credentials so we can deploy to the cluster
     - uses: google-github-actions/get-gke-credentials@v0.2.1
       with:
         cluster_name: ${{ env.GKE_CLUSTER }}
         location: ${{ env.GKE_ZONE }}
         credentials: ${{ secrets.GKE_SA_KEY }}
-
+      id: credenciais-github-actions
     # Build the Docker image
     - name: Build
       run: |-
@@ -69,12 +71,13 @@ jobs:
           --build-arg GITHUB_SHA="$GITHUB_SHA" \
           --build-arg GITHUB_REF="$GITHUB_REF" \
           .
+      id: buildind
 
     # Push the Docker image to Google Container Registry
     - name: Publish
       run: |-
         docker push "gcr.io/$PROJECT_ID/$IMAGE:$GITHUB_SHA"
-        
+      id: push
 
     # Deploy the Docker image to the GKE cluster
     - name: Deploy
@@ -82,7 +85,8 @@ jobs:
         helm upgrade --install $DEPLOYMENT_NAME ./helm/$DEPLOYMENT_NAME --set image.repository=gcr.io/$PROJECT_ID/$IMAGE --set image.tag=$GITHUB_SHA 
         kubectl rollout status deployment/$DEPLOYMENT_NAME
         kubectl get services -o wide
-    
+      id: deploy
+      
     - uses: act10ns/slack@v1
       with:
         status: ${{ job.status }} 
