--- a/helm/ejs-challenge/values.yaml
+++ b/helm/ejs-challenge/values.yaml
@@ -7,10 +7,10 @@ deploymentAnnotations:
 #deploymentStrategy: Recreate  
 replicaCount: 1
 image:
-  repository: gcr.io/ead-ucam/ejs-actions
+  repository: gcr.io/ambient-stone-317317/ejs 
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
-  tag: 7728dbc12353aa111c3902624fcc676e92b877f9
+  tag: latest
 imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
@@ -38,17 +38,20 @@ service:
   type: LoadBalancer
   port: 80
 ingress:
-  enabled: false
-  annotations: {}
-  # kubernetes.io/ingress.class: nginx
-  # kubernetes.io/tls-acme: "true"
+  enabled: true
+  annotations: 
+    kubernetes.io/ingress.class: "nginx"
+    cert-manager.io/cluster-issuer: lets-prod
+    cert-manager.io/issue-temporary-certificate: "true"
+    acme.cert-manager.io/http01-edit-in-place: "true"
   hosts:
-    - host: chart-example.local
-      paths: []
-  tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
+    - host: ejs.celeritas.fun
+      paths:
+       - path: /
+  tls: 
+   - secretName: ejs-tls
+     hosts:
+       - ejs.celeritas.fun
 resources:
   limits:
     cpu: "500m"
